src/main/webapp/css/ContentView.css
.ContentView{
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  min-width: 600px;
}

.ContentView .sidenav-ctn{
  position: absolute;
  top: 43px; left: 0; bottom: 0;
  width: 280px;
}

.ContentView .search-form{
  position: relative;
  width: 400px;
  margin: 30px auto;
}
  
.ContentView .search-form input{
  width: 300px;
  height: 30px;
}

.ContentView .search-result{
  top: 130px; right: 0; bottom: 0; left: 0;
  position: absolute;
  width: 80%;
  margin: 20px auto;
  padding: 5px;
  border: solid 1px #eee;
}

.ContentView .search-result .table  {
    height: 100%;
    margin: 10px;
}
.ContentView .search-result .table tr {
    border-bottom: 1px solid #dddddd;;
}


.ContentView .search-result .table thead.fixedHeader tr {
    position: relative;
    display: block;
    border-bottom: 1px solid #dddddd;;
}


.ContentView .search-result .table thead.fixedHeader th {
    font-weight: normal;
    padding: 4px 10px;
    text-align: left;
}

.ContentView .search-result .table  tr td, .ContentView .search-result .table  tr th{
    width: 300px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}





.ContentView .search-result .table tbody.scrollContent {
    display: block;
    height: 100%;
    overflow-y: scroll;
    width: 100%
}


.ContentView .search-result .table tbody.scrollContent tr {
    border-bottom: 1px solid #dddddd;
    display: block;
}

.ContentView .search-result .table tbody.scrollContent tr td {
    border:none;
    display: block;
}


.ContentView .search-info{
  display: block;
  color: #777;
  width: 375px;
  text-align: right;
  height: 16px;
}

